2011-03-11  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-57
	* fixing argument handling of dump-root
	* M python/RootUtils.py
	* M python/scripts/dump_root_file.py

2011-02-22  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-56
	* tentative fix for bug #78111: add a timeout around the cache
	  loading method.
	* A python/AthFile/timerdecorator.py
	* M python/AthFile/impl.py

2011-02-16  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-10-55
	* fixed documentation string
	* M python/scripts/dump_root_file.py

2011-02-08  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-54
	* retain entries synchronization between various trees by manually
	  triggering the file-split when the file size reaches 90% of the
	  TTree::GetMaxTreeSize() value.
	* M bin/filter-and-merge-d3pd.py

2011-02-07  Frank Winklmeier  <fwinkl@cern>

	* tagging PyUtils-00-10-53	
	* bin/pkgco.py: Add -r option to show most recent tag and use PyCmt
	* A bin/lstags: Moved from Tools/Scripts

2011-01-26  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-52
	* first stab at allowing to keep all payload-trees (and still
	  filter/merge them)
	* M bin/filter-and-merge-d3pd.py

	* tagging PyUtils-00-10-51
	* slightly more flexible diff-root
	* M python/scripts/diff_root_files.py

2011-01-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-50
	* fixing bug 77026: opening non-ROOT files in non-RAW mode was
	  raising an IOError.
	* M python/AthFile/impl.py

2011-01-13  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-49
	* raise a proper IOError when fopen fails to open a file
	* M python/AthFile/impl.py

2011-01-03  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-48
	* fix utest
	* M python/AthFile/tests.py

2010-12-21  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-10-47
	* improved root-file dumper and comparator